[package]
name = "postgres-json-derive"
version = "0.1.0"
edition = "2021"
authors = ["JohannesIBK <mail@greuter.dev>"]
license = "MIT"
description = "Derive macro for implementing ToSql and FromSql for a struct"
keywords = ["postgres", "json", "derive", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
postgres-types = { version = "0.2", features = ["with-serde_json-1", "derive"] }
quote = "1.0"
syn = "2.0"